# yapi-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  validate_server.py
.claude/: settings.local.json
.github/: CICD_FEATURES.md  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  release.yml
specs/001-model-context-protocol/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-model-context-protocol/contracts/: mcp-tools.schema.json
src/: __init__.py  server.py
src/yapi/: client.py  errors.py  models.py
src/yapi_mcp/: __init__.py  __main__.py  config.py  server.py
src/yapi_mcp/yapi/: __init__.py  client.py  errors.py  models.py
tests/: __init__.py  conftest.py  test_config.py  test_error_handling.py  test_server_startup.py  test_server_validation.py  test_tools_contract.py  test_yapi_client.py
